--- a/html/finaltask/index.html
+++ b/html/finaltask/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="icon" href="twitter.png">
+    <link rel="icon" href="assets/twitter.png">
 </head>
 <body>
     <h1>Build.myweb</h1>
