--- a/bootstrap/task6/index.html
+++ b/bootstrap/task6/index.html
@@ -68,7 +68,7 @@
     <p>Pygrammers is a community of Python enthusiasts with similar ideologies and interests</p>
     <a class="btn btn-primary"  href="https://web.telegram.org/k/#@pygrammers_official" target="_blank">Telegram</a>
   </section>
-
+<div id="Register">
       <div class="container-fluid col-12 col-xl-5">
       <form class="p-5">
           <legend class="text-center">Form:</legend>
@@ -100,7 +100,7 @@
           </div>
         </form>
       </div>
-
+</div>
   <section id="mentor" class="bg-light p-4">
     <div class="container text-center">
       <h3>Mentors</h3>
