--- a/bootstrap/task6/index.html
+++ b/bootstrap/task6/index.html
@@ -48,17 +48,23 @@
   </header>
 
   <section id="home" style="margin-top: 76px;">
-    <div class="row">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100 img-fluid" style="height: auto;" src="https://spiffy-fire-8ed.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2F00607fab-2ebf-48a1-9db6-4b992ec36984%2F7b64ba3f-2f86-4139-82f5-f7f15d6dbb23%2Fcarousel.png?table=block&id=d5125b7d-64f8-465b-b359-d3c398c3ef67&spaceId=00607fab-2ebf-48a1-9db6-4b992ec36984&width=2000&userId=&cache=v2" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 img-fluid" src="https://spiffy-fire-8ed.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2F00607fab-2ebf-48a1-9db6-4b992ec36984%2Fba939668-d381-4287-9f0f-8011489334c6%2Fcarousel2.png?table=block&id=a853a509-b55d-4217-9794-6ba337c312b8&spaceId=00607fab-2ebf-48a1-9db6-4b992ec36984&width=2000&userId=&cache=v2" style="height: auto;" alt="Third slide">
-          </div>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="carousel.png" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+          <img src="carousel2.png" class="d-block w-100">
         </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
     
   </section>
